--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | MahouShoujoWardrobe</title>
+    <title>MahouShoujoWardrobe</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
@@ -12,14 +12,9 @@
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/MahouShoujoWardrobe.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body>
+  <body bgcolor="#000000">
     <div class="webgl-content">
       <div id="unityContainer" style="width: 600px; height: 850px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">MahouShoujoWardrobe</div>
-      </div>
     </div>
   </body>
 </html>
