--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/MahouShoujoWardrobeBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MahouShoujoWardrobeBuild.data.gz",
-        frameworkUrl: buildUrl + "/MahouShoujoWardrobeBuild.framework.js.gz",
-        codeUrl: buildUrl + "/MahouShoujoWardrobeBuild.wasm.gz",
+        dataUrl: buildUrl + "/MahouShoujoWardrobeBuild.data",
+        frameworkUrl: buildUrl + "/MahouShoujoWardrobeBuild.framework.js",
+        codeUrl: buildUrl + "/MahouShoujoWardrobeBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MahouShoujoWardrobe",
